@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160608"
-#define public MagickPackageReleaseDate "snapshot-20160608"
+#define public MagickPackageVersionAddendum ".020160611"
+#define public MagickPackageReleaseDate "snapshot-20160611"
