@@ -38,6 +38,7 @@
 <!-- -*- mode: rst -*- -->
 <!-- This text is in reStucturedText format, so it may look a bit odd. -->
 <!-- See http://docutils.sourceforge.net/rst.html for details. -->
+<p><a class="reference external" href="security.html">Security</a> - GraphicsMagick security (and how to report issues).</p>
 <p><a class="reference external" href="Changes.html">Change Logs</a> - Read the detailed change logs to see what changed.</p>
 <p><a class="reference external" href="Copyright.html">License</a> - Copyrights and usage terms for GraphicsMagick.</p>
 <p><a class="reference external" href="contribute.html">Contribute</a> - Contribute your work to the project.</p>
