@@ -1,3 +1,7 @@
+2016-06-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* www/security.rst: Add a page about GraphicsMagick security.
+
 2016-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/render.c (DrawPrimitive): Over-aggressive error reporting
